--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       </section>
       <!--Виды работ-->
-      <section class="works-section section">
+      <!-- <section class="works-section section">
         <div class="container">
           <h2 class="works-section-title title">Чем мы занимаемся</h2>
           <ul class="works list">
@@ -147,7 +147,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Команда-->
       <section class="team-section section">
         <div class="container">
@@ -310,7 +310,7 @@
                 <source srcset="./images/main_section_4/mikhail-desktop.jpg 1x, ./images/main_section_4/mikhail-desktop@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <source srcset="./images/main_section_4/mikhail-tablet.webp 1x, ./images/main_section_4/mikhail-tablet@2x.webp 2x"
-                  media="(min-width: 768px)" type="image/webp">mikhail
+                  media="(min-width: 768px)" type="image/webp">
                 <source srcset="./images/main_section_4/mikhail-tablet.jpg 1x, ./images/main_section_4/mikhail-tablet@2x.jpg 2x"
                   media="(min-width: 768px)">
                 <source srcset="./images/main_section_4/mikhail-mobile.webp 1x, ./images/main_section_4/mikhail-mobile@2x.webp 2x"
@@ -405,7 +405,7 @@
       </section>
     </main>
     <!--Подвал-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-contacts-list list">
           <a
@@ -487,7 +487,7 @@
           </form>
         </div>               
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="wrapper-modal">
