--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       </section>
     </main>
     <!--Подвал-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-contacts-list list">
           <a
@@ -474,7 +474,7 @@
             </li>
           </ul>
         </div>
-        <div class="subscribe">
+       <div class="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <form class="subscribe-form" action="#" method="get">
             <input class="subscribe-form-input" type="text" name="subscribe-form-input" placeholder="E-mail">
@@ -485,9 +485,9 @@
               </svg>
             </button>
           </form>
-        </div>               
+        </div>            
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="wrapper-modal">
