Добавляет оформление портфолио

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       </section>
       <!--Виды работ-->
-      <!-- <section class="works-section section">
+      <section class="works-section section">
         <div class="container">
           <h2 class="works-section-title title">Чем мы занимаемся</h2>
           <ul class="works list">
@@ -147,7 +147,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Команда-->
       <section class="team-section section">
         <div class="container">
