--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             Web<span class="logo-half">Studio</span>
           </a>
           <button class="menu-btn" type="button" aria-expanded="true" aria-controls="menu-container" data-menu-button>
-            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+            <svg class="menu-btn-svg" width="40" height="40" aria-label="Переключатель мобильного меню">
               <use class="menu-btn-close" href="./images/svg/sprite.svg#menu-close"></use>
               <use class="menu-btn-open" href="./images/svg/sprite.svg#menu-open"></use>
             </svg>
@@ -107,9 +107,9 @@
                     <source srcset="./images/portfolio/technocriack-tablet.jpg 1x, ./images/portfolio/technocriack-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/technocriack-mobile.webp 1x, ./images/portfolio/technocriack-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/technocriack-mobile.jpg 1x, ./images/portfolio/technocriack-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/technocriack.jpg" alt="страница сайта на мониторе ноутбука" width="370" height="294" />
                   </picture>                  
                 </div>
@@ -133,9 +133,9 @@
                     <source srcset="./images/portfolio/poster-tablet.jpg 1x, ./images/portfolio/poster-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/poster-mobile.webp 1x, ./images/portfolio/poster-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/poster-mobile.jpg 1x, ./images/portfolio/poster-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/poster.jpg" alt="баскетболиста с мячом пытается блокировать соперник" />
                   </picture>                  
                 </div>
@@ -161,9 +161,9 @@
                     <source srcset="./images/portfolio/seafood-tablet.jpg 1x, ./images/portfolio/seafood-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/seafood-mobile.webp 1x, ./images/portfolio/seafood-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/seafood-mobile.jpg 1x, ./images/portfolio/seafood-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/seafood.jpg" alt="логотип ресторана" />
                   </picture>                  
                 </div>
@@ -189,9 +189,9 @@
                     <source srcset="./images/portfolio/headphones-tablet.jpg 1x, ./images/portfolio/headphones-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/headphones-mobile.webp 1x, ./images/portfolio/headphones-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/headphones-mobile.jpg 1x, ./images/portfolio/headphones-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/headphones.jpg" alt="наушники" />
                   </picture>                  
                 </div>
@@ -216,9 +216,9 @@
                     <source srcset="./images/portfolio/boxes-tablet.jpg 1x, ./images/portfolio/boxes-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/boxes-mobile.webp 1x, ./images/portfolio/boxes-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/boxes-mobile.jpg 1x, ./images/portfolio/boxes-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/boxes.jpg" alt="две коробки" />
                   </picture>                  
                 </div>
@@ -244,9 +244,9 @@
                     <source srcset="./images/portfolio/monitor-tablet.jpg 1x, ./images/portfolio/monitor-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/monitor-mobile.webp 1x, ./images/portfolio/monitor-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/monitor-mobile.jpg 1x, ./images/portfolio/monitor-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/monitor.jpg" alt="страница сайта на мониторе" />    
                   </picture>
               </div>
@@ -272,9 +272,9 @@
                     <source srcset="./images/portfolio/magazine-tablet.jpg 1x, ./images/portfolio/magazine-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/magazine-mobile.webp 1x, ./images/portfolio/magazine-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/magazine-mobile.jpg 1x, ./images/portfolio/magazine-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/magazine.jpg" alt="журнал раскрыт на статье" />
                   </picture>                  
                 </div>
@@ -300,9 +300,9 @@
                     <source srcset="./images/portfolio/label-tablet.jpg 1x, ./images/portfolio/label-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/label-mobile.webp 1x, ./images/portfolio/label-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/label-mobile.jpg 1x, ./images/portfolio/label-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/label.jpg" alt="товарный ярлык" />
                   </picture>                  
                 </div>
@@ -328,9 +328,9 @@
                     <source srcset="./images/portfolio/laptop-tablet.jpg 1x, ./images/portfolio/laptop-tablet@2x.jpg 2x"
                       media="(min-width: 768px)">
                     <source srcset="./images/portfolio/laptop-mobile.webp 1x, ./images/portfolio/laptop-mobile@2x.webp 2x"
-                      media="(min-width: 320px)" type="image/webp">
+                      media="(max-width: 767px)" type="image/webp">
                     <source srcset="./images/portfolio/laptop-mobile.jpg 1x, ./images/portfolio/laptop-mobile@2x.jpg 2x"
-                      media="(min-width: 320px)">
+                      media="(max-width: 767px)">
                     <img src="./images/portfolio/laptop.jpg" alt="человек работает за ноутбуком" />
                   </picture>                  
                 </div>
@@ -351,20 +351,35 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-contacts-list list">
-          <a href="./index.html" class="site-logo link" aria-label="логотип веб-студии" lang="en">Web<span
-              class="logo-var">Studio</span>
+          <a
+            href="./index.html"
+            class="site-logo link"
+            aria-label="логотип веб-студии"
+            lang="en"
+            >Web<span class="logo-var">Studio</span>
           </a>
           <address class="address">
             <ul class="footer-list list">
               <li class="footer-list-item">
-                <a class="footer-list-link link" href="https://goo.gl/maps/6B7yDmjmFDrhYiot9">г. Киев, пр-т Леси Украинки,
-                  26</a>
+                <a
+                  class="footer-list-link link"
+                  href="https://goo.gl/maps/6B7yDmjmFDrhYiot9"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
               </li>
               <li class="footer-list-item">
-                <a class="footer-list-link-contact link" href="mailto:info@example.com">info@example.com</a>
+                <a
+                  class="footer-list-link-contact link"
+                  href="mailto:info@example.com"
+                  >info@example.com</a
+                >
               </li>
               <li class="footer-list-item">
-                <a class="footer-list-link-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
+                <a
+                  class="footer-list-link-contact link"
+                  href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
               </li>
             </ul>
           </address>
@@ -402,7 +417,7 @@
             </li>
           </ul>
         </div>
-        <div class="subscribe">
+       <div class="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <form class="subscribe-form" action="#" method="get">
             <input class="subscribe-form-input" type="text" name="subscribe-form-input" placeholder="E-mail">
@@ -413,7 +428,7 @@
               </svg>
             </button>
           </form>
-        </div>      
+        </div>            
       </div>
     </footer>
     <script src="./js/menu.js"></script>
