исправление стилей элементов в header

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             Web<span class="logo-half">Studio</span>
           </a>
           <button class="menu-btn" type="button" aria-expanded="true" aria-controls="menu-container" data-menu-button>
-            <svg class="menu-btn-svg" width="40" height="40" aria-label="Переключатель мобильного меню">
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
               <use class="menu-btn-close" href="./images/svg/sprite.svg#menu-close"></use>
               <use class="menu-btn-open" href="./images/svg/sprite.svg#menu-open"></use>
             </svg>
@@ -34,10 +34,10 @@
             <div class="site-nav-section">
               <ul class="site-nav list">
                 <li class="site-nav-item">
-                  <a class="site-nav-link link" href="./index.html">Студия</a>
+                  <a class="site-nav-link link current" href="./index.html">Студия</a>
                 </li>
                 <li class="site-nav-item">
-                  <a class="site-nav-link link current" href="./portfolio.html">Портфолио</a>
+                  <a class="site-nav-link link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="site-nav-item">
                   <a class="site-nav-link link" href="">Контакты</a>
