--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,10 @@
             <div class="site-nav-section">
               <ul class="site-nav list">
                 <li class="site-nav-item">
-                  <a class="site-nav-link link current" href="./index.html">Студия</a>
+                  <a class="site-nav-link link" href="./index.html">Студия</a>
                 </li>
                 <li class="site-nav-item">
-                  <a class="site-nav-link link" href="./portfolio.html">Портфолио</a>
+                  <a class="site-nav-link link current" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="site-nav-item">
                   <a class="site-nav-link link" href="">Контакты</a>
