устраняет ошибки и недочеты после проверки

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
 
       <!--Преимущества веб-студии-->
-      <section class="section">
+      <section class="advantages section">
         <div class="container">
           <h2 class="section-title" hidden>Преимущества веб-студии</h2>
           <ul class="advantages list">
@@ -356,7 +356,7 @@
         </div>
       </section>
       <!--Клиенты-->
-      <section class="section">
+      <section class="clients section">
         <div class="container">
           <h2 class="clients-section-title title">Постоянные клиенты</h2>
           <ul class="clients-list list">
